--- a/includes/fontsampler-option-feature-label.twig
+++ b/includes/fontsampler-option-feature-label.twig
@@ -1,21 +1,23 @@
-<div class="fontsampler-options-features-details-row">
-    <strong>Label</strong>
-    <div>
-        <label class="fontsampler-radio">
-            <input type="radio" name="{{ label }}_use_default" value="0"
-            {% if use_default %} checked="checked" {% endif %}>
-        </label>
-        <label>
-            <span class="setting-description">{{ description }}</span>
-            <input type="text" name="{{ name }}_label" class="fontsampler-admin-slider-label"
-                   value="{{ use_default ? default : value }}"/>
-        </label>
-    </div>
-    <div>
-        <label class="fontsampler-radio">
-            <input type="radio" name="{{ label }}_use_default" value="1"
-                {% if not use_default %} checked="checked" {% endif %}>
-            <span>Use default: {{ default }}</span>
-        </label>
-    </div>
-</div>
+{% extends 'options-row.twig' %}
+
+{% block label %}Label{% endblock %}
+
+{% block custom %}
+    <label class="fontsampler-radio">
+        <input type="radio" name="{{ label }}_use_default" value="0"
+        {% if use_default %} checked="checked" {% endif %}>
+    </label>
+    <label>
+        <span class="setting-description">{{ description }}</span>
+        <input type="text" name="{{ name }}_label" class="fontsampler-admin-slider-label"
+               value="{{ use_default ? default : value }}"/>
+    </label>
+{% endblock %}
+
+{% block default %}
+    <label class="fontsampler-radio">
+        <input type="radio" name="{{ label }}_use_default" value="1"
+            {% if not use_default %} checked="checked" {% endif %}>
+        <span>Use default: {{ default }}</span>
+    </label>
+{% endblock %}
