--- a/includes/fontsampler-option-feature-slider.twig
+++ b/includes/fontsampler-option-feature-slider.twig
@@ -1,17 +1,19 @@
-<div class="fontsampler-options-features-details-row">
-    <strong>{{ header }}</strong>
-    <div>
-        <label class="fontsampler-radio">
-            <input type="radio" name="{{ label }}_use_default" value="0"
-                   {% if use_default %} checked="checked" {% endif %}
-        </label>
-        {{ include ('fontsampler-option-slider.twig', { label: slider_label, name: slider_name, value: slider_default }) }}
-    </div>
-    <div>
-        <label class="fontsampler-radio">
-            <input type="radio" name="{{ label }}_use_default" value="1"
-                    {% if not use_default %} checked="checked" {% endif %}>
-            <span>Use Default: {{ slider_default }}</span>
-        </label>
-    </div>
-</div>
+{% extends 'options-row.twig' %}
+
+{% block label %}{{ header }}{% endblock %}
+
+{% block custom %}
+    <label class="fontsampler-radio">
+        <input type="radio" name="{{ label }}_use_default" value="0"
+               {% if use_default %} checked="checked" {% endif %}
+    </label>
+    {{ include ('fontsampler-option-slider.twig', { label: slider_label, name: slider_name, value: slider_default }) }}
+{% endblock %}
+
+{% block default %}
+    <label class="fontsampler-radio">
+        <input type="radio" name="{{ label }}_use_default" value="1"
+                {% if not use_default %} checked="checked" {% endif %}>
+        <span>Use Default: {{ slider_default }}</span>
+    </label>
+{% endblock %}
